2001-12-20  Mark McLoughlin  <mark@skynet.ie>

	Implement applet preferences handling in gconf. Applets should
	install schemas without any applytos. The schemas will be associated
	with the actual keys when we know where the applet should store its
	preferences.

	* panel-applet-gconf.[ch]: (panel_applet_gconf_get_full_key),
	(panel_applet_gconf_set_bool), (panel_applet_gconf_set_int),
	(panel_applet_gconf_set_string), (panel_applet_gconf_set_float),
	(panel_applet_gconf_set_value), (panel_applet_gconf_get_bool),
	(panel_applet_gconf_get_int), (panel_applet_gconf_get_string),
	(panel_applet_gconf_get_float), (panel_applet_gconf_get_value):
	impl convenience functions.

	* panel-applet.[ch]: (panel_applet_associate_schemas_in_dir),
	(panel_applet_add_preferences): impl associating a directory full
	of schemas with the appropiate keys in the applets preferences
	directory.
	(panel_applet_get_preferences_key), (panel_applet_get_expand_flags),
	(panel_applet_set_expand_flags), (panel_applet_get_size),
	(panel_applet_get_orient): improve error checking.
	(panel_applet_control_bound): cache the prefs dir.

	* Makefile.am: add panel-applet-gconf.[ch].

	* TODO: knock this off the todo list :-)

2001-12-19  Mark McLoughlin  <mark@skynet.ie>

	* TODO: new file.

2001-12-17  Mark McLoughlin  <mark@skynet.ie>

	Turn the thing on its head. We now have a BonoboItemHandler
	so that prefs_key can be set before we start constructing 
	our widgetry. Unfortunately this means api changes.

	* panel-applet.h:
	(panel_applet_new): kill widget arg.
	(panel_applet_construct): ditto.
	(panel_applet_get_global_key): kill.
	(panel_applet_get_private_key): kill.
	(panel_applet_get_preferences_key): impl.
	(panel_applet_factory_main): change callback to a
	PanelAppletFactoryCallback.
	(panel_applet_shlib_factory): impl.

	* panel-applet.c:
	(panel_applet_get_preferences_key): impl.
	(panel_applet_finalize): free private_key and iid.