@@ -1,3 +1,4 @@
 VOID:ENUM,POINTER,STRING
 VOID:INT
 VOID:VOID
+BOOLEAN:STRING
