@@ -1,3 +1,12 @@
+Thu Dec 27 23:30:15 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am: fix including of marshal header file in the .c file
+
+	* panel-applet-masrhal.list, panel-applet.[ch]: Use actual GClosure
+	  inside the code and add closure types of main methods.  This
+	  way we also no longer look at out of scope local vars which has
+	  a fun effect on shlib applets.
+
 2001-12-20  Mark McLoughlin  <mark@skynet.ie>
 
 	Implement applet preferences handling in gconf. Applets should
